# http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: build_option.cmake  compile_setting.cmake  cpack.cmake  install.cmake
http-server/: CMakeLists.txt  dir.html  html_filler.cpp  html_filler.h  main.cpp  static_server.cpp  static_server.h
test/: CMakeLists.txt
